--- a/about-us/what-we-stand-for.html
+++ b/about-us/what-we-stand-for.html
@@ -82,7 +82,7 @@
         </nav>
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="/images/Updated YM logo.png" alt="Young Minds logo" style="width: 200px;" /></a>
+                <a class="navbar-brand" href="index.html"><img src="images/Yuva minds.png" alt="Yuva Minds logo" style="width: 200px; " /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
                     <span></span>
@@ -347,7 +347,7 @@
 		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
 			<div class="footer_blog">
 				<div class="full margin-bottom_30">
-					<a href="/index.html"><img class="logo" src="/images/Updated YM logo.png" alt="YoungMinds Official Logo"/></a>
+					<a href="/index.html"><img class="logo" src="./images/Yuva minds.png" style="width: 200px; margin-top: 50px;"alt="YuvaMinds Official Logo"/></a>
 				</div>
 			</div>
 		</div>
