--- a/about-us/what-we-stand-for.html
+++ b/about-us/what-we-stand-for.html
@@ -82,7 +82,7 @@
         </nav>
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="./images/Yuva minds.png" alt="Yuva Minds logo" style="width: 200px; " /></a>
+                <a class="navbar-brand" href="index.html"><img src="/images/Yuva minds.png" alt="Yuva Minds logo" style="width: 200px; " /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
                     <span></span>
