--- a/about-us/what-we-stand-for.html
+++ b/about-us/what-we-stand-for.html
@@ -254,7 +254,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="full">
-                        <img src="/images/unsplash/Consistency.jpg" alt="Consistency at Vasave - Supporting Image">
+                        <img src="./images/unsplash/Consistency.jpg" alt="Consistency at Vasave - Supporting Image">
                     </div>
                 </div>
             </div>
