--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <!-- Site Metas -->
     <title>Contact Us | Yuva Minds</title>
     <meta name="keywords" content="Apprentice wage 2021, Government apprentice scheme, National apprenticeship week 2021, How will apprenticeship help me, Why do apprenticeship, Training provider UK, Apprenticeship London, Traineeships London, Degree apprenticeships near me, Business apprenticeships near me">
-    <meta name="description" content="Contact Us | Yuva Minds - If you want to join us, please give us a call on 020 3488 6800 or email us info@youngmind.uk">
+    <meta name="description" content="Contact Us | Yuva Minds - If you want to join us, please give us a call on 020 3488 6800 or email us info@yuvaminds.uk">
 	<meta name="author" content="Rushil from Yuva Minds">
 
     <!-- Site Icons -->
@@ -67,7 +67,7 @@
         <nav class="first-nav_contact">
             <div class="left">
                 <ul>
-                    <li><a href="mailto:info@youngmind.uk"><span class="first-nav_contact-icon img" id="first"><img src="images/icons/email_sealed_icon_fill_white.png" alt="YuvaMinds Email Address"></span><span>info@youngmind.uk</span></a></li>
+                    <li><a href="mailto:info@yuvaminds.uk"><span class="first-nav_contact-icon img" id="first"><img src="images/icons/email_sealed_icon_fill_white.png" alt="YuvaMinds Email Address"></span><span>info@yuvaminds.uk</span></a></li>
                     <li><a href="tel:+44 2034886800"><span class="first-nav_contact-icon follow"><img src="images/icons/landline_icon_fill_white.png" alt="YuvaMinds Phone Number"></span><span>+44 20 3488 6800</span></a></li>
                 </ul>
             </div>
@@ -120,7 +120,7 @@
 			<div class="row">
 				<div class="full">
 					<div class="text_align_center">
-						<p>You could come into our local branch situated in 32 Lynwood Gardens, or call us at 020 3488 6800 alternatively you can fill our enquiry form or email us at info@youngmind.uk.</p>
+						<p>You could come into our local branch situated in 32 Lynwood Gardens, or call us at 020 3488 6800 alternatively you can fill our enquiry form or email us at info@yuvaminds.uk.</p>
 						<p>We are on major Social Media sites such as LinkedIn, Twitter, Instagram and Facebook. Feel free to reach out there as well.</p>
 					</div>
 				</div>
@@ -201,7 +201,7 @@
 							<h5>Contact</h5>
 							<ul class="full footer_content">
 								<li><img src="./images/icons/address_icon.png" alt="YuvaMinds Address" />32 Lynwood Gardens<br />Croydon<br />England<br />CR0 4QH</li>
-								<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@youngmind.uk</li>
+								<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@yuvaminds.uk</li>
 								<li><img src="./images/icons/landline_icon_fill.png" alt="YuvaMinds Phone Number">+44 20 3488 6800</li>
 							</ul>
 						</div>
