--- a/index.html
+++ b/index.html
@@ -196,6 +196,34 @@
         </div>
     </div>
     <!-- end section -->
+     <!-- section -->
+     <div class="section layout_padding_2">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="full float-right_img" >
+                        <img src="images/europian flag.png" alt="An image for Apply For Admission section" />
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="full">
+                        <div class="heading_main text_align_left">
+                            <h3>Trusted by the European Union</h3>
+                        </div>
+                        <div class="full">
+                            <p>
+                                Yuva minds is recognized and approved for CTC grant from European Union (LLC) to provide better quality education for Students.
+                            </p>
+                        </div>
+                        <div class="full">
+                            <a class="hvr-radial-out button-theme" href="contact.html">Apply</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end section -->
     <!-- section -->
     <div class="section layout_padding_2">
         <div class="container">
