adding a new section European union Grant

--- a/about.html
+++ b/about.html
@@ -176,6 +176,36 @@
         </div>
     </div>
     <!-- end section -->
+    <!-- section -->
+    <div class="section layout_padding_2">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="full">
+              <div class="heading_main text_align_left" style="padding-top: 30px">
+                <h3>Trusted by the European Union</h3>
+              </div>
+              <div class="full">
+                <p>
+                  Yuva minds is recognized and approved for CTC grant from European Union (LLC) 
+                  to provide better quality education for Students.
+                </p>
+              </div>
+              <div class="full">
+                <a class="hvr-radial-out button-theme" href="about.html">About Us</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="full">
+              <img src="images/europian flag.png" style="padding: 25px; border-radius: 45px; height: 350px;"
+                alt="An image for Apply For Admission section"/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end section -->
 	<div class="section layout_padding_2">
 		<div class="container">
 			<div class="row">
@@ -193,6 +223,11 @@
 	<div class="section layout_padding_2">
 		<div class="container">
 			<div class="row">
+        <div class="col-md-6">
+					<div class="full float-right_img">
+						<img src="images/Unsplash/ApprenticeshipOnAbout.jpg" alt="An image for Apprenticeships under the Services We Offer section" />
+					</div>
+				</div>
 				<div class="col-md-6">
 					<div class="full">
 						<div class="heading_main text_align_left">
@@ -209,23 +244,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6">
-					<div class="full">
-						<img src="images/Unsplash/ApprenticeshipOnAbout.jpg" alt="An image for Apprenticeships under the Services We Offer section" />
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
+  <!-- end section -->
 	<!-- section -->
 	<div class="section layout_padding_2">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
-					<div class="full float-right_img">
-						<img src="images/Unsplash/TraineeshipsOnAbout.jpg" alt="An image for Traineeships under the Services We Offer section" />
-					</div>
-				</div>
 				<div class="col-md-6">
 					<div class="full">
 						<div class="heading_main text_align_left">
@@ -239,6 +265,11 @@
 						<div class="full">
 							<a class="hvr-radial-out button-theme" href="traineeships.html">Learn More</a>
 						</div>
+					</div>
+				</div>
+        <div class="col-md-6">
+					<div class="full">
+						<img src="images/Unsplash/TraineeshipsOnAbout.jpg" style="padding: 25px; height:350px; border-radius: 45px" alt="An image for Traineeships under the Services We Offer section" />
 					</div>
 				</div>
 			</div>
