in European union change students to learners

--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
               <div class="full">
                 <p>
                   Yuva minds is recognized and approved for CTC grant from European Union (LLC) 
-                  to provide better quality education for Students.
+                  to provide better quality education for Learners.
                 </p>
               </div>
               <div class="full">
