In grant section changed students to learners

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <div class="full">
                   <p>
                     Yuva minds is recognized and approved for CTC grant from European Union (LLC) 
-                    to provide better quality education for Students.
+                    to provide better quality education for learners.
                   </p>
                 </div>
                 <div class="full">
