--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <nav class="first-nav_contact">
             <div class="left">
                 <ul>
-                    <li><a href="mailto:info@yuvaminds.uk"><span class="first-nav_contact-icon img" id="first"><img src="images/icons/email_sealed_icon_fill_white.png" alt="YuvaMinds Email Address"></span><span>info@yuvaminds.uk</span></a></li>
+                    <li><a href="mailto:info@yuvaminds.com"><span class="first-nav_contact-icon img" id="first"><img src="images/icons/email_sealed_icon_fill_white.png" alt="YuvaMinds Email Address"></span><span>info@yuvaminds.com</span></a></li>
                     <li><a href="tel:+44 2034886800"><span class="first-nav_contact-icon follow"><img src="images/icons/landline_icon_fill_white.png" alt="YuvaMinds Phone Number"></span><span>+44 20 3488 6800</span></a></li>
                 </ul>
             </div>
@@ -158,7 +158,7 @@
                         <li><a href="https://wa.me/4402034886800" target="_blank"><span class="icon"><img src="images/socials/whatsapp_icon.svg" alt="YuvaMinds WhatsApp Contact Direct" /></span><span>WhatsApp</span></a></li>
                         <li><a href="contact.html"><span class="icon"><img src="images/icons/address_icon.png" alt="Address icon" /></span><span>Location</span></a></li>
                         <li><a href="tel:02034886800"><span class="icon"><img src="images/icons/landline_icon_fill_white.png" alt="Phone Icon" /></span><span>Call</span></a></li>
-                        <li><a href="mailto:info@yuvaminds.uk"><span class="icon"><img src="images/icons/email_sealed_icon_fill.png" alt="Email Icon" /></span><span>Email</span></a></li>
+                        <li><a href="mailto:info@yuvaminds.com"><span class="icon"><img src="images/icons/email_sealed_icon_fill.png" alt="Email Icon" /></span><span>Email</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -426,7 +426,7 @@
                 <h5>Contact</h5>
 					<ul class="full footer_content">
 						<li><img src="./images/icons/address_icon.png" alt="YuvaMinds Address" />32 Lynwood Gardens<br />Croydon<br />England<br />CR0 4QH</li>
-						<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@yuvaminds.uk</li>
+						<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@yuvaminds.com</li>
 						<li><img src="./images/icons/landline_icon_fill.png" alt="YuvaMinds Phone Number">+44 20 3488 6800</li>
 					</ul>
 			</div>
