--- a/apprenticeships.html
+++ b/apprenticeships.html
@@ -67,7 +67,7 @@
         <nav class="first-nav_contact">
             <div class="left">
                 <ul>
-                    <li><a href="mailto:info@yuvaminds.uk"><span class="first-nav_contact-icon img" id="first"><img src="images/icons/email_sealed_icon_fill_white.png" alt="YuvaMinds Email Address"></span><span>info@yuvaminds.uk</span></a></li>
+                    <li><a href="mailto:info@yuvaminds.com"><span class="first-nav_contact-icon img" id="first"><img src="images/icons/email_sealed_icon_fill_white.png" alt="YuvaMinds Email Address"></span><span>info@yuvaminds.com</span></a></li>
                     <li><a href="tel:+44 2034886800"><span class="first-nav_contact-icon follow"><img src="images/icons/landline_icon_fill_white.png" alt="YuvaMinds Phone Number"></span><span>+44 20 3488 6800</span></a></li>
                 </ul>
             </div>
@@ -284,7 +284,7 @@
 				<h5>What qualification will I gain?</h5>
 				<p>During your apprenticeship programme, you will get nationally recognised qualifications depending on the programme you chose to complete. This is accredited by relevant industry regulatory bodies.</p>
 				<h5>How do I apply?</h5>
-				<p>Give us a call on 02034886800 or info@yuvaminds.uk so we can get right to it.</p>
+				<p>Give us a call on 02034886800 or info@yuvaminds.com so we can get right to it.</p>
 			</div>
 		</div>
 	</div>
@@ -343,7 +343,7 @@
                 <h5>Contact</h5>
 					<ul class="full footer_content">
 						<li><img src="./images/icons/address_icon.png" alt="YuvaMinds Address" />32 Lynwood Gardens<br />Croydon<br />England<br />CR0 4QH</li>
-						<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@yuvaminds.uk</li>
+						<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@yuvaminds.com</li>
 						<li><img src="./images/icons/landline_icon_fill.png" alt="YuvaMinds Phone Number">+44 20 3488 6800</li>
 					</ul>
 			</div>
