--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <!-- Site Metas -->
     <title>Contact Us | Yuva Minds</title>
     <meta name="keywords" content="Apprentice wage 2021, Government apprentice scheme, National apprenticeship week 2021, How will apprenticeship help me, Why do apprenticeship, Training provider UK, Apprenticeship London, Traineeships London, Degree apprenticeships near me, Business apprenticeships near me">
-    <meta name="description" content="Contact Us | Yuva Minds - If you want to join us, please give us a call on 020 3488 6800 or email us info@yuvaminds.uk">
+    <meta name="description" content="Contact Us | Yuva Minds - If you want to join us, please give us a call on 020 3488 6800 or email us info@yuvaminds.com">
 	<meta name="author" content="Rushil from Yuva Minds">
 
     <!-- Site Icons -->
@@ -67,7 +67,7 @@
         <nav class="first-nav_contact">
             <div class="left">
                 <ul>
-                    <li><a href="mailto:info@yuvaminds.uk"><span class="first-nav_contact-icon img" id="first"><img src="images/icons/email_sealed_icon_fill_white.png" alt="YuvaMinds Email Address"></span><span>info@yuvaminds.uk</span></a></li>
+                    <li><a href="mailto:info@yuvaminds.com"><span class="first-nav_contact-icon img" id="first"><img src="images/icons/email_sealed_icon_fill_white.png" alt="YuvaMinds Email Address"></span><span>info@yuvaminds.com</span></a></li>
                     <li><a href="tel:+44 2034886800"><span class="first-nav_contact-icon follow"><img src="images/icons/landline_icon_fill_white.png" alt="YuvaMinds Phone Number"></span><span>+44 20 3488 6800</span></a></li>
                 </ul>
             </div>
@@ -201,7 +201,7 @@
 							<h5>Contact</h5>
 							<ul class="full footer_content">
 								<li><img src="./images/icons/address_icon.png" alt="YuvaMinds Address" />32 Lynwood Gardens<br />Croydon<br />England<br />CR0 4QH</li>
-								<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@yuvaminds.uk</li>
+								<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@yuvaminds.com</li>
 								<li><img src="./images/icons/landline_icon_fill.png" alt="YuvaMinds Phone Number">+44 20 3488 6800</li>
 							</ul>
 						</div>
