--- a/traineeships.html
+++ b/traineeships.html
@@ -67,7 +67,7 @@
         <nav class="first-nav_contact">
             <div class="left">
                 <ul>
-                    <li><a href="mailto:info@yuvaminds.uk"><span class="first-nav_contact-icon img" id="first"><img src="images/icons/email_sealed_icon_fill_white.png" alt="YuvaMinds Email Address"></span><span>info@yuvaminds.uk</span></a></li>
+                    <li><a href="mailto:info@yuvaminds.com"><span class="first-nav_contact-icon img" id="first"><img src="images/icons/email_sealed_icon_fill_white.png" alt="YuvaMinds Email Address"></span><span>info@yuvaminds.com</span></a></li>
                     <li><a href="tel:+44 2034886800"><span class="first-nav_contact-icon follow"><img src="images/icons/landline_icon_fill_white.png" alt="YuvaMinds Phone Number"></span><span>+44 20 3488 6800</span></a></li>
                 </ul>
             </div>
@@ -185,7 +185,7 @@
 					</ul>
 				</p>
 				<p>The traineeship is probably not right for you if you already have the skills and experience needed to find an Apprenticeship or work and/or are aged 24+ (unless you are subject to Learning Difficulty Assessments and are aged 16 or over and under 25) and already in employment.</p>
-				<p>For more information please contact our advisors on 02034886800 or email info@yuvaminds.uk</p>
+				<p>For more information please contact our advisors on 02034886800 or email info@yuvaminds.com</p>
 				<h5>What will you Gain?</h5>
 				<p>IC Training Centre will provide you with:
 					<ul>
@@ -219,7 +219,7 @@
 						<li class="list">The traineeship is free for your business but you must support trainees with expenses such as transport and meals</li>
 					</ul>
 					<br />
-					Interested in providing work placement for trainees? Give us a call on <a href="tel:442034886800">+44 20 3488 6800</a> or email <a href="mailto:info@yuvaminds.uk">info@yuvaminds.uk</a>	
+					Interested in providing work placement for trainees? Give us a call on <a href="tel:442034886800">+44 20 3488 6800</a> or email <a href="mailto:info@yuvaminds.com">info@yuvaminds.com</a>	
 				</p>
 			</div>
 		</div>
@@ -262,7 +262,7 @@
                 <h5>Contact</h5>
 					<ul class="full footer_content">
 						<li><img src="./images/icons/address_icon.png" alt="YuvaMinds Address" />32 Lynwood Gardens<br />Croydon<br />England<br />CR0 4QH</li>
-						<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@yuvaminds.uk</li>
+						<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@yuvaminds.com</li>
 						<li><img src="./images/icons/landline_icon_fill.png" alt="YuvaMinds Phone Number">+44 20 3488 6800</li>
 					</ul>
 			</div>
