--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
 			<div class="row">
 				<div class="full">
 					<div class="text_align_center">
-						<p>You could come into our local branch situated in 32 Lynwood Gardens, or call us at 020 3488 6800 alternatively you can fill our enquiry form or email us at info@yuvaminds.uk.</p>
+						<p>You could come into our local branch situated in 32 Lynwood Gardens, or call us at 020 3488 6800 alternatively you can fill our enquiry form or email us at info@yuvaminds.com.</p>
 						<p>We are on major Social Media sites such as LinkedIn, Twitter, Instagram and Facebook. Feel free to reach out there as well.</p>
 					</div>
 				</div>
