--- a/index.html
+++ b/index.html
@@ -417,6 +417,8 @@
                         <li><a href="/apprenticeships.html">Apprenticeships</a></li>
                         <li><a href="/traineeships.html">Traineeships</a></li>
                         <li><a href="/success-stories.html">Success Stories</a></li>
+			<li><a href="pdf/Yuva Minds Ltd Carbon Redution Plan.pdf">Carbon Reduction Plan</a></li>
+				
                     </ul>
             </div>
         </div>
