--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                         <li><a href="/apprenticeships.html">Apprenticeships</a></li>
                         <li><a href="/traineeships.html">Traineeships</a></li>
                         <li><a href="/success-stories.html">Success Stories</a></li>
-			<li><a href="pdf/Yuva Minds Ltd Carbon Redution Plan.pdf">Carbon Reduction Plan</a></li>
+			<li><a href="/Carbonreductionplan.html">Carbon Reduction Plan</a></li>
 				
                     </ul>
             </div>
