--- a/about.html
+++ b/about.html
@@ -294,6 +294,7 @@
 					<ul> 
 						<li><a href="/about.html">About YuvaMinds</a></li>
                         <li><a href="/about-us/what-we-stand-for.html">What We Stand For</a></li>
+						<li><a href="/Carbonreductionplan.html">Carbon Reduction Plan</a></li>
 					</ul>
 			</div>
 		</div>
@@ -305,7 +306,7 @@
                         <li><a href="/apprenticeships.html">Apprenticeships</a></li>
                         <li><a href="/traineeships.html">Traineeships</a></li>
                         <li><a href="/success-stories.html">Success Stories</a></li>
-			 <li><a href="pdf/Yuva Minds Ltd Carbon Redution Plan.pdf">Carbon Reduction Plan</a></li>
+		
 				
                     </ul>
             </div>
