--- a/traineeships.html
+++ b/traineeships.html
@@ -242,6 +242,7 @@
 					<ul> 
 						<li><a href="/about.html">About YuvaMinds</a></li>
                         <li><a href="/about-us/what-we-stand-for.html">What We Stand For</a></li>
+						<li><a href="/Carbonreductionplan.html">Carbon Reduction Plan</a></li>
 					</ul>
 			</div>
 		</div>
