--- a/Carbonreductionplan.html
+++ b/Carbonreductionplan.html
@@ -294,7 +294,7 @@
 					<ul> 
 						<li><a href="/about.html">About YuvaMinds</a></li>
                         <li><a href="/about-us/what-we-stand-for.html">What We Stand For</a></li>
-                        <li><a href="pdf/Yuva Minds Ltd Carbon Redution Plan.pdf">Carbon Reduction Plan</a></li>
+                        <li><a href="/Carbonreductionplan.html">Carbon Reduction Plan</a></li>
 					</ul>
 			</div>
 		</div>
