--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 			<div class="footer_blog full white_fonts">
                 <h5>Contact</h5>
 					<ul class="full footer_content">
-						<li><img src="./images/icons/address_icon.png" alt="YuvaMinds Address" />Airport House Purley Way<br />Croydon<br />England<br />CR0 0XZ</li>
+						<li><img src="./images/icons/address_icon.png" alt="YuvaMinds Address" />32 Lynwood Gardens<br />Croydon<br />England<br />CR0 4QH</li>
 						<li><img src="./images/icons/email_sealed_icon_fill.png" alt="YuvaMinds Solutions Email Address">info@yuvaminds.com</li>
 						<li><img src="./images/icons/landline_icon_fill.png" alt="YuvaMinds Phone Number">+44 20 3488 6800</li>
 					</ul>
